--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts:
   hover_effect: ^0.6.0
+  responsive_builder: ^0.4.1
+  responsive_framework: ^0.1.2
 
 dev_dependencies:
   flutter_test:
