--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   hover_effect: ^0.6.0
   responsive_builder: ^0.4.1
   responsive_framework: ^0.1.2
+  flutter_insta: ^1.0.0
+  carousel_slider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
